crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI017_PYI017.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI017.pyi:4:1: PYI017 (complex-assignment-in-stub) Stubs should not contain assignments to attributes or multiple targets
  |
2 | a = var  # OK
3 |
4 | b = c = int  # PYI017
  | ^^^^^^^^^^^ PYI017 (complex-assignment-in-stub)
5 |
6 | a.b = int  # PYI017
  |

PYI017.pyi:6:1: PYI017 (complex-assignment-in-stub) Stubs should not contain assignments to attributes or multiple targets
  |
4 | b = c = int  # PYI017
5 |
6 | a.b = int  # PYI017
  | ^^^^^^^^^ PYI017 (complex-assignment-in-stub)
7 |
8 | d, e = int, str  # PYI017
  |

PYI017.pyi:8:1: PYI017 (complex-assignment-in-stub) Stubs should not contain assignments to attributes or multiple targets
   |
 6 | a.b = int  # PYI017
 7 |
 8 | d, e = int, str  # PYI017
   | ^^^^^^^^^^^^^^^ PYI017 (complex-assignment-in-stub)
 9 |
10 | f, g, h = int, str, TypeVar("T")  # PYI017
   |

PYI017.pyi:10:1: PYI017 (complex-assignment-in-stub) Stubs should not contain assignments to attributes or multiple targets
   |
 8 | d, e = int, str  # PYI017
 9 |
10 | f, g, h = int, str, TypeVar("T")  # PYI017
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI017 (complex-assignment-in-stub)
11 |
12 | i: TypeAlias = int | str  # OK
   |
