crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI019_PYI019_1.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI019_1.pyi:4:10: PYI019 (custom-type-var-for-self) [*] Use `Self` instead of custom TypeVar `S`
  |
3 | class F:
4 |     def m[S](self: S) -> S: ...
  |          ^^^^^^^^^^^^^^^^^ PYI019 (custom-type-var-for-self)
  |
  = help: Replace TypeVar `S` with `Self`

ℹ Safe fix
1 1 | import typing
2 2 | 
3 3 | class F:
4   |-    def m[S](self: S) -> S: ...
  4 |+    def m(self) -> typing.Self: ...
